[package]
name = "vnstat-rs-api" # the name of the package
edition = "2024"
version = "1.0.0"
authors = ["Kotarou"]

[dependencies]
log = "0.4"
toml = "0.9"
time = "0.3"
anyhow = "1.0"
dashmap = "7.0.0-rc2"
tokio-util = "0.7.15"
serde_json = "1.0.140"
async-stream = "0.3.6"
futures-util = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = { version = "0.12", features = ["ansi_term"] }
cached = { version = "0.56.0", features = ["async", "async_tokio_rt_multi_thread"] }
tokio = { version = "1", features = ["io-util","sync", "process"], default-features = false }
axum = { version = "0.8", features = ["http1", "json", "matched-path", "original-uri", "tokio"], default-features = false }

[profile.release]
lto = "fat"
panic = "abort"
strip = true