[package]
name = "vnstat-rs-api" # the name of the package
edition = "2024"
version = "1.0.1"
authors = ["Kotarou"]

[dependencies]
toml = "1.1"
time = { version = "0.3", features = ["local-offset", "formatting"] }
anyhow = "1.0"
dashmap = "6.1"
tokio-util = "0.7"
serde_json = "1.0"
async-stream = "0.3"
futures-util = "0.3"
percent-encoding = "2.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
cached = { version = "2.0", features = ["async", "async_tokio_rt_multi_thread"] }
tokio = { version = "1.47", features = ["io-util", "sync", "process", "signal", "time"], default-features = false }
axum = { version = "0.8", features = ["http1", "json", "matched-path", "original-uri", "tokio"], default-features = false }
tower-http = { version = "0.7", features = ["cors", "trace"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = true
